syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.frete";
option java_outer_classname = "Frete";

package br.com.zupacademy.frete;

service FreteService {
  rpc send (FreteRequest) returns (FreteReply) {}
  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse) {}
}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteResponse {
  double valor = 1;
  string cep = 2;
}

message FreteRequest {
  string name = 1;
}

message FreteReply {
  string message = 1;
}